test/programs/invalid_programs/classes/return_inside_constructor.jm
#!TypeError

class Foo
  new()
    return 2
  end
end
